--- a/src/sass/components/_password__copy.scss
+++ b/src/sass/components/_password__copy.scss
@@ -1,4 +1,8 @@
+@use '../utils/media' as m;
 .password__copy {
+  @include m.media('tablet', 'desktop') {
+    padding-right: 1rem;
+  }
   filter: invert(88%) sepia(28%) saturate(520%) hue-rotate(65deg)
     brightness(100%) contrast(104%);
   transition: filter 200ms ease-in-out;
