--- a/src/sass/layout/_main.scss
+++ b/src/sass/layout/_main.scss
@@ -1,7 +1,7 @@
 @use '../utils/media' as m;
 
 .main {
-  max-width: 540px;
+  max-width: calc(540px + 2rem);
   margin: 0 auto;
   padding: 1rem;
   margin-block: 2rem;
