--- a/src/sass/components/_copy-password.scss
+++ b/src/sass/components/_copy-password.scss
@@ -1,5 +1,5 @@
 @use '../utils/media' as m;
-.password__copy {
+.copy-password {
   @include m.media('tablet', 'desktop') {
     padding-right: 1rem;
   }
@@ -11,12 +11,12 @@
       brightness(101%) contrast(101%);
   }
 }
-.password__copy__message__container {
+.copy-password__container {
   position: relative;
   width: 20px;
 }
 
-.password__copy__message {
+.copy-password__message {
   position: absolute;
   right: 0;
   top: 50%;
@@ -30,7 +30,7 @@
   padding-right: 0.7rem;
   transition: transform 200ms ease-in-out;
   transform-origin: right;
-  &_show {
+  &--visible {
     transform: scaleX(1) translateY(-50%);
   }
 }
