--- a/src/sass/components/_strength.scss
+++ b/src/sass/components/_strength.scss
@@ -16,21 +16,21 @@
   height: 28px;
 
   &[data-type='too weak!'] {
-    &:is(.strength__bar__1) {
+    &:is(.strength__bar-1) {
       background-color: var(--clr-to-weak);
       border: 2px solid var(---clr-to-weak);
     }
   }
 
   &[data-type='weak'] {
-    &:is(.strength__bar__1, .strength__bar__2) {
+    &:is(.strength__bar-1, .strength__bar__2) {
       background-color: var(--clr-weak);
       border: 2px solid var(---clr-weak);
     }
   }
 
   &[data-type='medium'] {
-    &:is(.strength__bar__1, .strength__bar__2, .strength__bar__3) {
+    &:is(.strength__bar-1, .strength__bar__2, .strength__bar-3) {
       background-color: var(--clr-medium);
       border: 1px solid var(---clr-medium);
     }
@@ -38,10 +38,10 @@
 
   &[data-type='strong'] {
     &:is(
-        .strength__bar__1,
+        .strength__bar-1,
         .strength__bar__2,
-        .strength__bar__3,
-        .strength__bar__4
+        .strength__bar-3,
+        .strength__bar-4
       ) {
       background-color: var(--clr-strong);
       border: 1px solid var(---clr-strong);
